2000-05-19  Akim Demaille  <akim@epita.fr>

	Fix Autoconf/123.

	* libm4.m4: Rename `symbols' as `m4_symbols'.

2000-05-19  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (AC_PROG_CC_GNU, AC_PROG_CXX_GNU, AC_PROG_F77_GNU):
	Rename as:
	(_AC_PROG_CC_GNU, _AC_PROG_CXX_GNU, _AC_PROG_F77_GNU): these.
	Compute the value of GCC, GXX and G77 here.
	Set to `no' (instead of empty) if not the GNU compiler.
	(AC_PROG_CC, AC_PROG_CXX, AC_PROG_F77): Adjust.
	* doc/autoconf.texi: Adjust.

2000-05-19  Akim Demaille  <akim@epita.fr>

	Fix Autoconf/106.

	* aclang.m4 (AC_PROG_F77): Follow strictly the same scheme as
	AC_PROG_CC to compute the default FFLAGS.

2000-05-19  Akim Demaille  <akim@epita.fr>

	Either we cross-compile the whole package, or we don't.
	Using --host enables cross-compilation.

	* acgeneral.m4 (_AC_INIT_PARSE_ARGS): `--host' enables cross
	compilation.
	(AC_CANONICAL_BUILD): The help string should explicitly mention
	cross compilation.
	* aclang.m4 (AC_LANG(C), AC_LANG(C++), AC_LANG(Fortran 77)): Don't
	set `cross_compiling'.
	(AC_PROG_CC, AC_PROG_CXX, AC_PROG_F77): Run your `WORK' partner
	only if not cross-compiling.
	(AC_PROG_CC_WORKS, AC_PROG_CXX_WORKS, AC_PROG_F77_WORKS):
	If does not work, don't assume an implicit cross-compilation:
	fail.
	* doc/autoconf.texi: Adjust.

2000-05-19  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_SHELL_UNSETENV, AC_SHELL_UNSET): Add the
	missing quotes.

2000-05-19  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_INIT_PARSE_ARGS): Prefer
	case $foo in
	*[^-a-zA-Z0-9_]*) AC_ACTION;;
	esac
	over
	if echo "$foo" | grep '[^-a-zA-Z0-9_]' >/dev/null 2>&1; then
	AC_ACTION
	fi

2000-05-19  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Testing Values and Files): Delete, move its
	content into...
	(Limitations of Usual Tools::test): here.
	Document more limitations.

2000-05-19  Akim Demaille  <akim@epita.fr>

	* acspecific.m4 (_AC_LIBOBJ_GETLOADAVG): New macro, extracted from
	(AC_FUNC_GETLOADAVG): here.
	Use it.
