@@ -1,5 +1,9 @@
 2000-05-19  Akim Demaille  <akim@epita.fr>
 
+	* acgeneral.m4 (AC_TRY_COMPILER): Fix quotation.
+
+2000-05-19  Akim Demaille  <akim@epita.fr>
+
 	Fix Autoconf/123.
 
 	* libm4.m4: Rename `symbols' as `m4_symbols'.
